--- a/css/style.css
+++ b/css/style.css
@@ -113,13 +113,13 @@ body {
   color: var(--secondary-title-color);
   padding: 32px 0;
 }
-.header-link:hover,
-.header-link:focus {
+.header-link:hover .header-link:focus {
   color: var(--accent-color);
 }
 .header-link.current {
   color: var(--accent-color);
 }
+
 .header-logo {
   font-family: Raleway, sans-serif;
   font-weight: 700;
@@ -141,6 +141,7 @@ body {
   display: block;
   padding: 32px 0;
   display: flex;
+  align-items: center;
 }
 .header-contacts-link:hover,
 .header-contacts-link:focus {
@@ -181,6 +182,7 @@ body {
   background-size: cover;
   padding: 200px 0px;
   text-align: center;
+  margin: 0 auto;
 }
 .hero-btn {
   font-family: inherit;
@@ -192,6 +194,8 @@ body {
   letter-spacing: 0.06em;
   display: inline-block;
   padding: 10px 32px;
+  color: var(--primary-title-color);
+  background-color: var(--accent-color);
 }
 
 /*-----------Benefits-------------*/
@@ -246,12 +250,16 @@ body {
 }
 .works-list {
   display: flex;
-  justify-content: space-between;
+  margin-right: -30px;
+}
+.works-item {
+  flex-basis: calc(100% / 3 - 30px);
+  margin-right: 30px;
 }
 /*-----------Team-------------*/
 
 .team {
-  background-color: var(--third-background-color);
+  background-color: var(--btn-background-color);
 }
 .team-list {
   display: flex;
@@ -263,10 +271,10 @@ body {
   background-color: var(--backgrond-item-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .team-item-bottom {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding: 30px 32px;
 }
 .team-title {
   font-weight: 500;
@@ -328,6 +336,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 16px 32px;
+  border-radius: 4px;
 }
 .clients-item + .clients-item {
   margin-left: 30px;
@@ -357,6 +367,7 @@ body {
 }
 .footer-container {
   display: flex;
+  align-items: baseline;
 }
 .footer-logo {
   font-family: Raleway;
@@ -434,6 +445,12 @@ body {
 }
 /*-------------------Portfolio----------*/
 
+.active-button {
+  color: var(--primary-title-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
 .main-list {
   display: flex;
   justify-content: center;
