--- a/css/style.css
+++ b/css/style.css
@@ -112,8 +112,10 @@ body {
   letter-spacing: 0.02em;
   color: var(--secondary-title-color);
   padding: 32px 0;
+  display: block;
 }
-.header-link:hover .header-link:focus {
+.header-link:hover,
+.header-link:focus {
   color: var(--accent-color);
 }
 .header-link.current {
@@ -131,6 +133,7 @@ body {
 }
 .header-logo.second {
   color: var(--logo-color);
+  margin-right: 0;
 }
 .header-contacts-link {
   font-weight: 500;
@@ -332,30 +335,32 @@ body {
 .clients-item {
   width: 170px;
   height: 92px;
-  border: 1px solid #afb1b8;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 16px 32px;
-  border-radius: 4px;
 }
 .clients-item + .clients-item {
   margin-left: 30px;
 }
-.clients-item:hover,
-.clients-item:focus {
+.clients-link:hover,
+.clients-link:focus {
   border: 1px solid var(--accent-color);
 }
 .clients-link {
-  display: block;
+  width: 100%;
+  height: 100%;
+
+  padding: 16px 32px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .clients-icon {
   width: 106px;
   height: 60px;
   fill: #afb1b8;
 }
-.clients-item:hover .clients-icon,
-.clients-item:focus .clients-icon {
+.clients-link:hover .clients-icon,
+.clients-link:focus .clients-icon {
   fill: var(--accent-color);
 }
 
